fix: add z-index for copy page popover

--- a/static/css/components/copy-page-button.css
+++ b/static/css/components/copy-page-button.css
@@ -33,6 +33,7 @@
 
 #copy-page-content {
   position: absolute;
+  z-index: 9;
   margin-top: 0.25rem;
   padding: 0.75rem 0.5rem;
   border: 1px solid var(--gray-a4);
